# MajerModuleQT

./: CMakeLists.txt  README.md  main.cpp
